kubernetes/prometheus/thanos/thanos-query.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: query
  name: thanos-query
spec:
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
  - name: http
    port: 9090
    targetPort: http
  selector:
    app.kubernetes.io/component: query

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: query
  name: thanos-query
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: query
  template:
    metadata:
      labels:
        app.kubernetes.io/component: query
    spec:
      containers:
      - name: thanos-query
        args:
        - query
        - --grpc-address=0.0.0.0:10901
        - --http-address=0.0.0.0:9090
        - --query.timeout=10m
        - --query.auto-downsampling
        - --query.replica-label=prometheus_replica
        - |
          --endpoint.sd-config=endpoints:
          - address: "dnssrv+_grpc._tcp.thanos-store.monitoring.svc.cluster.local"
          - address: "dnssrv+_grpc._tcp.prometheus-operated.monitoring.svc.cluster.local"
        image: thanos
        resources:
          requests:
            memory: 300Mi
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /-/healthy
            port: 9090
            scheme: HTTP
          periodSeconds: 30
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /-/ready
            port: 9090
            scheme: HTTP
          periodSeconds: 5
        ports:
        - containerPort: 10901
          name: grpc
        - containerPort: 9090
          name: http
      terminationGracePeriodSeconds: 120
