kubernetes/prometheus/thanos/thanos-store.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: store
  name: thanos-store
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
  - name: http
    port: 10902
    targetPort: 10902
  selector:
    app.kubernetes.io/component: store

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: store
  name: thanos-store
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/component: store
  serviceName: thanos-store
  template:
    metadata:
      labels:
        app.kubernetes.io/component: store
    spec:
      containers:
      - args:
        - store
        - --data-dir=/var/thanos/store
        - --grpc-address=0.0.0.0:10901
        - --http-address=0.0.0.0:10902
        - --objstore.config=$(OBJSTORE_CONFIG)
        - --sync-block-duration=30m
        - --block-meta-fetch-concurrency=5
        - --block-sync-concurrency=5
        image: thanos
        livenessProbe:
          failureThreshold: 8
          httpGet:
            path: /-/healthy
            port: 10902
            scheme: HTTP
          periodSeconds: 30
        name: thanos-store
        resources:
          requests:
            memory: 500Mi
            cpu: 200m
        ports:
        - containerPort: 10901
          name: grpc
        - containerPort: 10902
          name: http
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /-/ready
            port: 10902
            scheme: HTTP
          periodSeconds: 5
        volumeMounts:
        - mountPath: /var/thanos/store
          name: data
          readOnly: false
      terminationGracePeriodSeconds: 120
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "nfs-qnap"
      resources:
        requests:
          storage: 10Gi
