kubernetes/prometheus/thanos/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-query
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-internal
    namespace: envoy-gateway-system
  hostnames:
  - thanos.internal.yuha0.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: thanos-query
      port: 9090
